# project-kb

./: AGENTS.md  Makefile  README.md  cli.py  db.py  main.py  models.py  pyproject.toml  search.py
docs/: PRD.md
pkb/: cli.py  db.py  models.py  options.py  output.py
pkb/commands/: init_cmd.py  note.py  project.py  search.py  task.py
reference/project-kb/: SKILL.md
tests/: conftest.py  test_cli.py  test_completion.py  test_db.py  test_note.py  test_project.py  test_search.py  test_task.py
